site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitbadges-docs
spec:
  type: ClusterIP
  selector:
    app: bitbadges-docs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
